syntax = "proto3";

option go_package = "github.com/empaid/estateedge/common/auth";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Validate(ValidateRequest) returns (ValidateResponse);
}

message LoginRequest {
    string username = 1;
    string passowrd = 2;
}

message LoginResponse {
    string access_token = 1;
    int64 expires_at = 2;
}

message ValidateRequest {
    string token = 1;

}
message ValidateResponse {
    bool valid = 1;
    string username = 2;
}

